--- a/ChatbotAPI/requirements.txt
+++ b/ChatbotAPI/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.5.2
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
 click==8.1.3
+colorama==0.4.4
 fastapi==0.78.0
 filelock==3.7.0
 h11==0.13.0
